--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ span.price {
         <p><a href="#">Product 4</a> <span class="price">$20</span></p>
 	<p><a href="#">Product 5</a> <span class="price">$20</span></p>
 	<p><a href="#">Product 6</a> <span class="price">$50</span></p>
+	<p><a href="#">Product 7</a> <span class="price">$50</span></p>
         <hr>
         <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
       </div>
