--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ span.price {
 	<p><a href="#">Product 6</a> <span class="price">$50</span></p>
 	<p><a href="#">Product 7</a> <span class="price">$50</span></p>
         <p><a href="#">Product 8</a> <span class="price">$50</span></p>
+	<p><a href="#">Product 9</a> <span class="price">$70</span></p>      
         <hr>
         <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
       </div>
